--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,32 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+}
+.flex input,.flex button {
+  width: 300px;
+  margin: 5px;
+}
+.creat {
+  color:white;
+}
+.my-list {
+  text-align: center;
+}
+.creat:hover {
+  color:white;
+}
+.blog-list {
+  margin-bottom: 20px;
+}
+.headerr {
+  float: left;
+  width: 127px;
+  text-align: left;
+}
